Fix FAQ Modal module for smaller screens.
- Allow panels to automatically overflow and take as much vertical
  space as required.
- Reduce padding of lists.
- Properly center the modal's container (modal-dialog).
- Use modal-body. It is better for overflowing content (it allows
  scrollbars).
- Add (responsive) padding for the close button (btn_close).

--- a/www/main.css
+++ b/www/main.css
@@ -71,5 +71,5 @@ p {
 .app-navset-bar-fix a.nav-link.active {
   /* Change the space between each active
      <nav> element and its underline. */
-  padding: 8px 5px !important;
+  padding: 8px 5px 16px 5px !important;
 }
